new data version, WIP on improving test converage for temp walks